Adding configurable geocode API paths
* v1.1/geocoders returns list of available geocoders
* v1.1/geocode allows the geocoders that will be used to be set.

Point is to avoid using rate limiting or expensive coders, unless needed
